--- a/lego/read.html
+++ b/lego/read.html
@@ -303,10 +303,18 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa170.txt">aa170</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa171.html">aa171</a></td>
+      <td>A Thousand Ships</td>
+      <td>Natalie Haynes</td>
+      <td>2019</td>
+      <td>2025-06-06</td>
+      <td>greek mythology trojan war odyssey</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa170.html">aa170</a></td>
       <td>The Subtle Art of Not Giving a Fuck</td>
-      <td>2016</td>
       <td>Mark Manson</td>
+      <td>2016</td>
       <td>2025-06-02</td>
       <td>philosophy self help</td>
     </tr>
@@ -1191,20 +1199,20 @@
       <td>artificial intelligence agi</td>
     </tr>
     <tr>
-      <td>aa046</td>
-      <td>Pnin</td>
-      <td>Vladimir Nabokov</td>
-      <td>1957</td>
-      <td>2022-08-14</td>
-      <td>fiction</td>
-    </tr>
-    <tr>
       <td>aa045</td>
       <td>The Rational Optimist</td>
       <td>Matt Ridley</td>
       <td>2010</td>
       <td>2022-08-14</td>
       <td>reason economics</td>
+    </tr>
+    <tr>
+      <td>aa046</td>
+      <td>Pnin</td>
+      <td>Vladimir Nabokov</td>
+      <td>1957</td>
+      <td>2022-08-14</td>
+      <td>fiction</td>
     </tr>
     <tr>
       <td>aa044</td>
