--- a/lego/read.html
+++ b/lego/read.html
@@ -263,12 +263,20 @@
       <td>philosophy mind computational neuroscience psychology</td>
     </tr>
     <tr>
-      <td>aa143</td>
-      <td>The Iliad</td>
-      <td>Homer, tr. Emily Wilson</td>
-      <td>2023</td>
+      <td>aa162</td>
+      <td>The Consciousness Instinct</td>
+      <td>Michael S. Gazzaniga</td>
+      <td>2018</td>
       <td>2025-99-99</td>
-      <td>fiction greek mythology</td>
+      <td>neuroscience consciousness mind</td>
+    </tr>
+    <tr>
+      <td>aa175</td>
+      <td>Proto: How One Ancient Language Went Global</td>
+      <td>Laura Spinney</td>
+      <td>2025</td>
+      <td>2025-99-99</td>
+      <td>linguistics proto-indo-european language</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
@@ -279,12 +287,12 @@
       <td>cultural revolution china mao communism</td>
     </tr>
     <tr>
-      <td>aa162</td>
-      <td>The Consciousness Instinct</td>
-      <td>Michael S. Gazzaniga</td>
-      <td>2018</td>
+      <td>aa143</td>
+      <td>The Iliad</td>
+      <td>Homer, tr. Emily Wilson</td>
+      <td>2023</td>
       <td>2025-99-99</td>
-      <td>neuroscience consciousness mind</td>
+      <td>fiction greek mythology</td>
     </tr>
     <tr>
       <td>aa100</td>
@@ -301,6 +309,30 @@
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa174.html">aa174</a></td>
+      <td>Travels with George</td>
+      <td>Nathaniel Philbrick</td>
+      <td>2021</td>
+      <td>2025-07-28</td>
+      <td>american revolution</td>
+    </tr>
+    <tr>
+      <td>aa173</td>
+      <td>The Last Days of the Romanovs</td>
+      <td>Helen Rappaport</td>
+      <td>2017</td>
+      <td>2025-07-15</td>
+      <td>russian history romanovs bolshevik revolution</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa172.txt">aa172</a></td>
+      <td>Bowling Alone: The Collapse and Revival of American Community</td>
+      <td>Robert D. Putnam</td>
+      <td>2000</td>
+      <td>2025-06-20</td>
+      <td>history social capital social science civic engagement community</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa171.html">aa171</a></td>
