--- a/lego/aa174.html
+++ b/lego/aa174.html
@@ -27,5 +27,11 @@ cat > "lego/aa174.html" << HTML_HEADER
 <p>Travels with George, Philbrick</p>
 <br>
 <p>Why I finished this book is a mystery to me. It is neither a good piece of history, nor self-reflection. These are diary pages better left hidden as scrawls in a lined notebook under a pillow, illegible as they are unreadable. Philbrick recounts a conversation with a Washington interpreter-slash-impressionist at Monticello who attributes the difficulty in relating to current audiences to screentime. Other examples throughout the book are either equally unenlightening and shallow or meaningless.</p>
+<br>
+<p>With one exception, in the last pages of the book.</p>
+<br>
+<p>&quot;By subsuming sectional and philosophical interests to the good of the whole, the Union is the antidote to arrogance and self-importance, because there will always be something bigger than a single person, town, city, state, or region—or any single race, religion, sexual orientation, or set of beliefs. The founders never claimed to have created the ideal political system. But no one over the course of the last 244 years has come up with a better form of government. The fact that we are in a position today to find fault with the past is a tribute to what was created by the Declaration of Independence, the Constitution, and the labors of George Washington. If our country is ever going to improve in the future, we need to look the past full in the face today, and there, at the very beginning, is our first president: a slaveholder, a land baron, a general, and a politician, who believed with all his soul in the Union.&quot;</p>
+<br>
+<p>The second to last sentence in that paragraph starts off strong, but quickly loses its balance, attributing the success of the nation to &#39;the labors of George Washington.&#39; While I understand he has something of a point to make (whether I can make out what that point may have been), the Jefferson-dumping and ovations to George come together in a rather sloppy hash. Still, the fact remains that, in the last 249 years, now, no better form of government has emerged.</p>
 </body>
 </html>
