--- a/lego/read.html
+++ b/lego/read.html
@@ -415,7 +415,7 @@
       <td>love neuroscience</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa139.txt">aa139</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa139.html">aa139</a></td>
       <td>The Genetic Book of the Dead: A Darwinian Reverie</td>
       <td>Richard Dawkins</td>
       <td>2024</td>
