--- a/lego/read.html
+++ b/lego/read.html
@@ -279,6 +279,14 @@
       <td>linguistics proto-indo-european language</td>
     </tr>
     <tr>
+      <td>aa176</td>
+      <td>My Name Is Emilia Del Valle</td>
+      <td>Isabel Allende</td>
+      <td>2025</td>
+      <td>2025-99-99</td>
+      <td>historical fiction chile war journalism</td>
+    </tr>
+    <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
       <td>The Tragedy of Liberation: A History of the Chinese Revolution 1945-1957</td>
       <td>Frank Dikötter</td>
