--- a/lego/read.html
+++ b/lego/read.html
@@ -335,7 +335,7 @@
       <td>russian history romanovs bolshevik revolution</td>
     </tr>
     <tr>
-      <td><a href="https://jd2504.github.io/lego/aa172.txt">aa172</a></td>
+      <td><a href="https://jd2504.github.io/lego/aa172.html">aa172</a></td>
       <td>Bowling Alone: The Collapse and Revival of American Community</td>
       <td>Robert D. Putnam</td>
       <td>2000</td>
