--- a/lego/read.html
+++ b/lego/read.html
@@ -271,20 +271,20 @@
       <td>neuroscience consciousness mind</td>
     </tr>
     <tr>
-      <td>aa175</td>
-      <td>Proto: How One Ancient Language Went Global</td>
-      <td>Laura Spinney</td>
-      <td>2025</td>
-      <td>2025-99-99</td>
-      <td>linguistics proto-indo-european language</td>
-    </tr>
-    <tr>
       <td>aa176</td>
       <td>My Name Is Emilia Del Valle</td>
       <td>Isabel Allende</td>
       <td>2025</td>
       <td>2025-99-99</td>
       <td>historical fiction chile war journalism</td>
+    </tr>
+    <tr>
+      <td>aa177</td>
+      <td>Original Sin</td>
+      <td>Jake Tapper & Alex Thompson</td>
+      <td>2025</td>
+      <td>2025-99-99</td>
+      <td>american history election mental health</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
@@ -317,6 +317,14 @@
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td>aa175</td>
+      <td>Proto: How One Ancient Language Went Global</td>
+      <td>Laura Spinney</td>
+      <td>2025</td>
+      <td>2025-08-13</td>
+      <td>linguistics proto-indo-european language</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa174.html">aa174</a></td>
