--- a/lego/read.html
+++ b/lego/read.html
@@ -263,28 +263,20 @@
       <td>philosophy mind computational neuroscience psychology</td>
     </tr>
     <tr>
-      <td>aa162</td>
-      <td>The Consciousness Instinct</td>
-      <td>Michael S. Gazzaniga</td>
-      <td>2018</td>
+      <td>aa143</td>
+      <td>The Iliad</td>
+      <td>Homer, tr. Emily Wilson</td>
+      <td>2023</td>
       <td>2025-99-99</td>
-      <td>neuroscience consciousness mind</td>
+      <td>fiction greek mythology</td>
     </tr>
     <tr>
-      <td>aa176</td>
-      <td>My Name Is Emilia Del Valle</td>
-      <td>Isabel Allende</td>
-      <td>2025</td>
+      <td>aa179</td>
+      <td>SPQR</td>
+      <td>Mary Beard</td>
+      <td>2016</td>
       <td>2025-99-99</td>
-      <td>historical fiction chile war journalism</td>
-    </tr>
-    <tr>
-      <td>aa177</td>
-      <td>Original Sin</td>
-      <td>Jake Tapper & Alex Thompson</td>
-      <td>2025</td>
-      <td>2025-99-99</td>
-      <td>american history election mental health</td>
+      <td>roman history rome</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
@@ -295,12 +287,12 @@
       <td>cultural revolution china mao communism</td>
     </tr>
     <tr>
-      <td>aa143</td>
-      <td>The Iliad</td>
-      <td>Homer, tr. Emily Wilson</td>
-      <td>2023</td>
+      <td>aa162</td>
+      <td>The Consciousness Instinct</td>
+      <td>Michael S. Gazzaniga</td>
+      <td>2018</td>
       <td>2025-99-99</td>
-      <td>fiction greek mythology</td>
+      <td>neuroscience consciousness mind</td>
     </tr>
     <tr>
       <td>aa100</td>
@@ -317,6 +309,30 @@
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td>aa176</td>
+      <td>My Name Is Emilia Del Valle</td>
+      <td>Isabel Allende</td>
+      <td>2025</td>
+      <td>2025-09-01</td>
+      <td>historical fiction chilean civil war journalism</td>
+    </tr>
+    <tr>
+      <td>aa178</td>
+      <td>Revenge of the Tipping Point</td>
+      <td>Malcolm Gladwell</td>
+      <td>2024</td>
+      <td>2025-08-27</td>
+      <td>NaN</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa177.html">aa177</a></td>
+      <td>Original Sin</td>
+      <td>Jake Tapper & Alex Thompson</td>
+      <td>2025</td>
+      <td>2025-08-18</td>
+      <td>american history election mental health</td>
     </tr>
     <tr>
       <td>aa175</td>
