--- a/lego/read.html
+++ b/lego/read.html
@@ -271,6 +271,14 @@
       <td>fiction greek mythology</td>
     </tr>
     <tr>
+      <td>aa180</td>
+      <td>The Corrections</td>
+      <td>Jonathan Franzen</td>
+      <td>2001</td>
+      <td>2025-99-99</td>
+      <td>fiction</td>
+    </tr>
+    <tr>
       <td>aa179</td>
       <td>SPQR</td>
       <td>Mary Beard</td>
