--- a/lego/read.html
+++ b/lego/read.html
@@ -271,20 +271,20 @@
       <td>fiction greek mythology</td>
     </tr>
     <tr>
-      <td>aa180</td>
-      <td>The Corrections</td>
-      <td>Jonathan Franzen</td>
-      <td>2001</td>
-      <td>2025-99-99</td>
-      <td>fiction</td>
-    </tr>
-    <tr>
       <td>aa179</td>
       <td>SPQR</td>
       <td>Mary Beard</td>
       <td>2016</td>
       <td>2025-99-99</td>
       <td>roman history rome</td>
+    </tr>
+    <tr>
+      <td>aa180</td>
+      <td>The Corrections</td>
+      <td>Jonathan Franzen</td>
+      <td>2001</td>
+      <td>2025-99-99</td>
+      <td>fiction</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
@@ -317,6 +317,14 @@
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td>aa181</td>
+      <td>Abundance</td>
+      <td>Ezra Klein & Derek Thompson</td>
+      <td>2025</td>
+      <td>2025-10-17</td>
+      <td>liberal politics economics policy</td>
     </tr>
     <tr>
       <td>aa176</td>
