--- a/lego/read.html
+++ b/lego/read.html
@@ -271,10 +271,10 @@
       <td>fiction greek mythology</td>
     </tr>
     <tr>
-      <td>aa180</td>
-      <td>The Corrections</td>
-      <td>Jonathan Franzen</td>
-      <td>2001</td>
+      <td>aa182</td>
+      <td>Brighton Rock</td>
+      <td>Graham Greene</td>
+      <td>1938</td>
       <td>2025-99-99</td>
       <td>fiction</td>
     </tr>
@@ -309,6 +309,14 @@
       <td>2021</td>
       <td>2025-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td>aa180</td>
+      <td>The Corrections</td>
+      <td>Jonathan Franzen</td>
+      <td>2001</td>
+      <td>2025-12-06</td>
+      <td>fiction</td>
     </tr>
     <tr>
       <td>aa179</td>
