--- a/lego/read.html
+++ b/lego/read.html
@@ -311,6 +311,14 @@
       <td>physics counterfactuals science</td>
     </tr>
     <tr>
+      <td><a href="https://jd2504.github.io/lego/aa183.html">aa183</a></td>
+      <td>Flesh</td>
+      <td>David Szalay</td>
+      <td>2025</td>
+      <td>2025-12-30</td>
+      <td>fiction</td>
+    </tr>
+    <tr>
       <td>aa180</td>
       <td>The Corrections</td>
       <td>Jonathan Franzen</td>
@@ -1287,20 +1295,20 @@
       <td>artificial intelligence agi</td>
     </tr>
     <tr>
-      <td>aa045</td>
-      <td>The Rational Optimist</td>
-      <td>Matt Ridley</td>
-      <td>2010</td>
-      <td>2022-08-14</td>
-      <td>reason economics</td>
-    </tr>
-    <tr>
       <td>aa046</td>
       <td>Pnin</td>
       <td>Vladimir Nabokov</td>
       <td>1957</td>
       <td>2022-08-14</td>
       <td>fiction</td>
+    </tr>
+    <tr>
+      <td>aa045</td>
+      <td>The Rational Optimist</td>
+      <td>Matt Ridley</td>
+      <td>2010</td>
+      <td>2022-08-14</td>
+      <td>reason economics</td>
     </tr>
     <tr>
       <td>aa044</td>
