--- a/lego/read.html
+++ b/lego/read.html
@@ -267,23 +267,15 @@
       <td>The Iliad</td>
       <td>Homer, tr. Emily Wilson</td>
       <td>2023</td>
-      <td>2025-99-99</td>
+      <td>2026-99-99</td>
       <td>fiction greek mythology</td>
-    </tr>
-    <tr>
-      <td>aa182</td>
-      <td>Brighton Rock</td>
-      <td>Graham Greene</td>
-      <td>1938</td>
-      <td>2025-99-99</td>
-      <td>fiction</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
       <td>The Tragedy of Liberation: A History of the Chinese Revolution 1945-1957</td>
       <td>Frank Dikötter</td>
       <td>2013</td>
-      <td>2025-99-99</td>
+      <td>2026-99-99</td>
       <td>cultural revolution china mao communism</td>
     </tr>
     <tr>
@@ -291,7 +283,7 @@
       <td>The Consciousness Instinct</td>
       <td>Michael S. Gazzaniga</td>
       <td>2018</td>
-      <td>2025-99-99</td>
+      <td>2026-99-99</td>
       <td>neuroscience consciousness mind</td>
     </tr>
     <tr>
@@ -299,7 +291,7 @@
       <td>The Alignment Problem</td>
       <td>Brian Christian</td>
       <td>2020</td>
-      <td>2025-99-99</td>
+      <td>2026-99-99</td>
       <td>artificial intelligence control problem alignment</td>
     </tr>
     <tr>
@@ -307,8 +299,16 @@
       <td>The Science of Can and Can't: A Physicist's Journey through the Land of Counterfactuals</td>
       <td>Chiara Marletto</td>
       <td>2021</td>
-      <td>2025-99-99</td>
+      <td>2026-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td><a href="https://jd2504.github.io/lego/aa182.html">aa182</a></td>
+      <td>Brighton Rock</td>
+      <td>Graham Greene</td>
+      <td>1938</td>
+      <td>2026-01-02</td>
+      <td>fiction</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa183.html">aa183</a></td>
@@ -1668,7 +1668,7 @@
       <td>Lisa Feldman Barrett</td>
       <td>2017</td>
       <td>NaN</td>
-      <td>2025-99-99</td>
+      <td>2026-01-03</td>
     </tr>
   </tbody>
 </table>
