--- a/lego/read.html
+++ b/lego/read.html
@@ -1670,6 +1670,14 @@
       <td>NaN</td>
       <td>2026-01-03</td>
     </tr>
+    <tr>
+      <td>aa184</td>
+      <td>The Power and the Glory</td>
+      <td>Graham Greene</td>
+      <td>1940</td>
+      <td>NaN</td>
+      <td>2025-01-16</td>
+    </tr>
   </tbody>
 </table>
 
