--- a/lego/read.html
+++ b/lego/read.html
@@ -33,7 +33,7 @@
     onkeyup="readSearch()"
     placeholder="Type in a year.."
     title="Type in a date"
-    value="2025">
+    value="2026">
 
   
   
@@ -1676,7 +1676,23 @@
       <td>Graham Greene</td>
       <td>1940</td>
       <td>NaN</td>
-      <td>2025-01-16</td>
+      <td>2026-01-16</td>
+    </tr>
+    <tr>
+      <td>aa186</td>
+      <td>The Book of Why</td>
+      <td>Judea Pearl</td>
+      <td>2018</td>
+      <td>NaN</td>
+      <td>2026-99-99</td>
+    </tr>
+    <tr>
+      <td>aa185</td>
+      <td>107 Days</td>
+      <td>Kamala Harris</td>
+      <td>2025</td>
+      <td>NaN</td>
+      <td>2026-99-99</td>
     </tr>
   </tbody>
 </table>
