--- a/lego/read.html
+++ b/lego/read.html
@@ -263,14 +263,6 @@
       <td>philosophy mind computational neuroscience psychology</td>
     </tr>
     <tr>
-      <td>aa143</td>
-      <td>The Iliad</td>
-      <td>Homer, tr. Emily Wilson</td>
-      <td>2023</td>
-      <td>2026-99-99</td>
-      <td>fiction greek mythology</td>
-    </tr>
-    <tr>
       <td><a href="https://jd2504.github.io/lego/aa146.html">aa146</a></td>
       <td>The Tragedy of Liberation: A History of the Chinese Revolution 1945-1957</td>
       <td>Frank Dikötter</td>
@@ -279,12 +271,44 @@
       <td>cultural revolution china mao communism</td>
     </tr>
     <tr>
+      <td>aa186</td>
+      <td>The Book of Why</td>
+      <td>Judea Pearl</td>
+      <td>2018</td>
+      <td>2026-99-99</td>
+      <td>computer science statistics artificial intelligence</td>
+    </tr>
+    <tr>
+      <td>aa185</td>
+      <td>107 Days</td>
+      <td>Kamala Harris</td>
+      <td>2025</td>
+      <td>2026-99-99</td>
+      <td>politics history</td>
+    </tr>
+    <tr>
+      <td>aa187</td>
+      <td>Waking Up</td>
+      <td>Sam Harris</td>
+      <td>2014</td>
+      <td>2026-99-99</td>
+      <td>meditation religion spirituality</td>
+    </tr>
+    <tr>
       <td>aa162</td>
       <td>The Consciousness Instinct</td>
       <td>Michael S. Gazzaniga</td>
       <td>2018</td>
       <td>2026-99-99</td>
       <td>neuroscience consciousness mind</td>
+    </tr>
+    <tr>
+      <td>aa143</td>
+      <td>The Iliad</td>
+      <td>Homer, tr. Emily Wilson</td>
+      <td>2023</td>
+      <td>2026-99-99</td>
+      <td>fiction greek mythology</td>
     </tr>
     <tr>
       <td>aa100</td>
@@ -301,6 +325,30 @@
       <td>2021</td>
       <td>2026-99-99</td>
       <td>physics counterfactuals science</td>
+    </tr>
+    <tr>
+      <td>aa189</td>
+      <td>The Running Ground</td>
+      <td>Nick Thompson</td>
+      <td>2025</td>
+      <td>2026-02-21</td>
+      <td>memoir running sports</td>
+    </tr>
+    <tr>
+      <td>aa184</td>
+      <td>The Power and the Glory</td>
+      <td>Graham Greene</td>
+      <td>1940</td>
+      <td>2026-01-16</td>
+      <td>fiction</td>
+    </tr>
+    <tr>
+      <td>aa158</td>
+      <td>How Emotions are Made: The Secret Life of the Brain</td>
+      <td>Lisa Feldman Barrett</td>
+      <td>2017</td>
+      <td>2026-01-03</td>
+      <td>neuroscience emotions psychology</td>
     </tr>
     <tr>
       <td><a href="https://jd2504.github.io/lego/aa182.html">aa182</a></td>
@@ -1663,34 +1711,10 @@
       <td>running endurance sports psychology fitness biology</td>
     </tr>
     <tr>
-      <td>aa158</td>
-      <td>How Emotions are Made: The Secret Life of the Brain</td>
-      <td>Lisa Feldman Barrett</td>
-      <td>2017</td>
-      <td>NaN</td>
-      <td>2026-01-03</td>
-    </tr>
-    <tr>
-      <td>aa184</td>
-      <td>The Power and the Glory</td>
-      <td>Graham Greene</td>
-      <td>1940</td>
-      <td>NaN</td>
-      <td>2026-01-16</td>
-    </tr>
-    <tr>
-      <td>aa186</td>
-      <td>The Book of Why</td>
-      <td>Judea Pearl</td>
-      <td>2018</td>
-      <td>NaN</td>
-      <td>2026-99-99</td>
-    </tr>
-    <tr>
-      <td>aa185</td>
-      <td>107 Days</td>
-      <td>Kamala Harris</td>
+      <td>aa188</td>
+      <td>Let Me Be Real With You</td>
       <td>2025</td>
+      <td>hardcover</td>
       <td>NaN</td>
       <td>2026-99-99</td>
     </tr>
